force-app/zurich-base/main/default/objects/RPAProposal__c/RPAProposal__c.object-meta.xml
<CustomObject>
    <description>Objeto que recoge los campos detectados por el Robot RPA</description>
    <label>RPA</label>
    <nameField>
        <displayFormat>RPA-{00000}</displayFormat>
        <label>RPA Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RPA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>