force-app/zurich-base/main/default/objects/RPAProposal__c/fields/AccidentLimit__c.field-meta.xml
<CustomField>
    <fullName>AccidentLimit__c</fullName>
    <label>Accident Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>