force-app/zurich-base/main/default/objects/RPAProposal__c/fields/AdjacentFranchise__c.field-meta.xml
<CustomField>
    <fullName>AdjacentFranchise__c</fullName>
    <label>Adjacent Franchise</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>