force-app/zurich-base/main/default/objects/RPAProposal__c/fields/AnimalsInCustody__c.field-meta.xml
<CustomField>
    <fullName>AnimalsInCustody__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Animals in custody</label>
    <type>Checkbox</type>
</CustomField>