force-app/zurich-base/main/default/objects/RPAProposal__c/fields/BaseTypeOfCalculation__c.field-meta.xml
<CustomField>
    <fullName>BaseTypeOfCalculation__c</fullName>
    <label>Base type of calculation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>