force-app/zurich-base/main/default/objects/RPAProposal__c/fields/BillingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>BillingPostalCode__c</fullName>
    <label>Billing Zip/Postal Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>