force-app/zurich-base/main/default/objects/RPAProposal__c/fields/BoundaryObjectLaundryandCloakroomH__c.field-meta.xml
<CustomField>
    <fullName>BoundaryObjectLaundryandCloakroomH__c</fullName>
    <label>Boundary Object Laundry and cloakroom H</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>