force-app/zurich-base/main/default/objects/RPAProposal__c/fields/CablesConduitsFranchise__c.field-meta.xml
<CustomField>
    <fullName>CablesConduitsFranchise__c</fullName>
    <label>Cables and conduits franchise</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>