force-app/zurich-base/main/default/objects/RPAProposal__c/fields/CalculationBase__c.field-meta.xml
<CustomField>
    <fullName>CalculationBase__c</fullName>
    <label>Calculation base</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>