force-app/zurich-base/main/default/objects/RPAProposal__c/fields/CarWashTunnels__c.field-meta.xml
<CustomField>
    <fullName>CarWashTunnels__c</fullName>
    <label>Car Wash Tunnels</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>