force-app/zurich-base/main/default/objects/RPAProposal__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Propuestas_RPA</relationshipName>
    <type>Lookup</type>
</CustomField>