force-app/zurich-base/main/default/objects/RPAProposal__c/fields/ClientTaxID__c.field-meta.xml
<CustomField>
    <fullName>ClientTaxID__c</fullName>
    <label>Client tax ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>