force-app/zurich-base/main/default/objects/RPAProposal__c/fields/CommentsRPA__c.field-meta.xml
<CustomField>
    <fullName>CommentsRPA__c</fullName>
    <description>RPA Subscriber Comment</description>
    <inlineHelpText>Comentario de la RPA para el suscriptor</inlineHelpText>
    <label>Comments RPA</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>