force-app/zurich-base/main/default/objects/RPAProposal__c/fields/CommentsSubscriber__c.field-meta.xml
<CustomField>
    <fullName>CommentsSubscriber__c</fullName>
    <description>Subscriber Comment for RPA to Include in Final Document</description>
    <inlineHelpText>Comentario del Suscriptor para que la RPA introduzca en el documento final</inlineHelpText>
    <label>Comments Subscriber</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>