force-app/zurich-base/main/default/objects/RPAProposal__c/fields/ConstrInstallWorksPropThirdParties__c.field-meta.xml
<CustomField>
    <fullName>ConstrInstallWorksPropThirdParties__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Constr/install works Prop third parties</label>
    <type>Checkbox</type>
</CustomField>