force-app/zurich-base/main/default/objects/RPAProposal__c/fields/DamageToVehiclesInCustodyFranchise__c.field-meta.xml
<CustomField>
    <fullName>DamageToVehiclesInCustodyFranchise__c</fullName>
    <label>Damage to vehicles in custody Franchise</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>