force-app/zurich-base/main/default/objects/RPAProposal__c/fields/DamageToVehiclesInCustodyLimit__c.field-meta.xml
<CustomField>
    <fullName>DamageToVehiclesInCustodyLimit__c</fullName>
    <label>Damage to vehicles in custody Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>