force-app/zurich-base/main/default/objects/RPAProposal__c/fields/DocumentationLanguage__c.field-meta.xml
<CustomField>
    <fullName>DocumentationLanguage__c</fullName>
    <label>Documentation Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>