force-app/zurich-base/main/default/objects/RPAProposal__c/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <label>Document Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>