force-app/zurich-base/main/default/objects/RPAProposal__c/fields/DronesFranchise__c.field-meta.xml
<CustomField>
    <fullName>DronesFranchise__c</fullName>
    <label>Drones Franchise</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>