force-app/zurich-base/main/default/objects/RPAProposal__c/fields/DronesLimit__c.field-meta.xml
<CustomField>
    <fullName>DronesLimit__c</fullName>
    <label>Drones Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>