force-app/zurich-base/main/default/objects/RPAProposal__c/fields/DronesMaxWeight__c.field-meta.xml
<CustomField>
    <fullName>DronesMaxWeight__c</fullName>
    <label>Drones Max Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>