force-app/zurich-base/main/default/objects/RPAProposal__c/fields/DronesNumber__c.field-meta.xml
<CustomField>
    <fullName>DronesNumber__c</fullName>
    <label>Drones number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>