force-app/zurich-base/main/default/objects/RPAProposal__c/fields/DronesUse__c.field-meta.xml
<CustomField>
    <fullName>DronesUse__c</fullName>
    <label>Drones Use</label>
    <length>255</length>
    <type>Text</type>
</CustomField>