force-app/zurich-base/main/default/objects/RPAProposal__c/fields/EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDate__c</fullName>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>