force-app/zurich-base/main/default/objects/RPAProposal__c/fields/EmployeesAndVisitorsFranchiseGoods__c.field-meta.xml
<CustomField>
    <fullName>EmployeesAndVisitorsFranchiseGoods__c</fullName>
    <label>Employees and Visitors Franchise Goods</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>