force-app/zurich-base/main/default/objects/RPAProposal__c/fields/ExportFranchiseUSAandCanada__c.field-meta.xml
<CustomField>
    <fullName>ExportFranchiseUSAandCanada__c</fullName>
    <label>Export Franchise to USA and Canada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>