force-app/zurich-base/main/default/objects/RPAProposal__c/fields/ExportLimittoUSAandCanada__c.field-meta.xml
<CustomField>
    <fullName>ExportLimittoUSAandCanada__c</fullName>
    <label>Export Limit to USA and Canada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>