force-app/zurich-base/main/default/objects/RPAProposal__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <label>Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>