force-app/zurich-base/main/default/objects/RPAProposal__c/fields/FiscalIndicator__c.field-meta.xml
<CustomField>
    <fullName>FiscalIndicator__c</fullName>
    <label>Fiscal Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>