force-app/zurich-base/main/default/objects/RPAProposal__c/fields/FranchiseAssemblyAndDisassemblyCosts__c.field-meta.xml
<CustomField>
    <fullName>FranchiseAssemblyAndDisassemblyCosts__c</fullName>
    <label>Franchise Assembly and Disassembly Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>