force-app/zurich-base/main/default/objects/RPAProposal__c/fields/FranchiseObjectInVehicle__c.field-meta.xml
<CustomField>
    <fullName>FranchiseObjectInVehicle__c</fullName>
    <label>Franchise object in vehicle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>