force-app/zurich-base/main/default/objects/RPAProposal__c/fields/FranchiseObjectRoom__c.field-meta.xml
<CustomField>
    <fullName>FranchiseObjectRoom__c</fullName>
    <label>Franchise Object Room</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>