force-app/zurich-base/main/default/objects/RPAProposal__c/fields/FranchisePre_existingGoods__c.field-meta.xml
<CustomField>
    <fullName>FranchisePre_existingGoods__c</fullName>
    <label>Franchise Pre-existing Goods</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>