force-app/zurich-base/main/default/objects/RPAProposal__c/fields/FranchiseProductsAnd_orWorks__c.field-meta.xml
<CustomField>
    <fullName>FranchiseProductsAnd_orWorks__c</fullName>
    <label>Franchise Products and/or Works</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>