force-app/zurich-base/main/default/objects/RPAProposal__c/fields/FranchiseProductWithdrawal__c.field-meta.xml
<CustomField>
    <fullName>FranchiseProductWithdrawal__c</fullName>
    <label>Franchise Product Withdrawal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>