force-app/zurich-base/main/default/objects/RPAProposal__c/fields/FranchiseWorkedElement__c.field-meta.xml
<CustomField>
    <fullName>FranchiseWorkedElement__c</fullName>
    <label>Franchise Worked Element</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>