force-app/zurich-base/main/default/objects/RPAProposal__c/fields/GoodsAnimalsCustodyFranchise__c.field-meta.xml
<CustomField>
    <fullName>GoodsAnimalsCustodyFranchise__c</fullName>
    <label>Goods/animals custody Franchise</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>