force-app/zurich-base/main/default/objects/RPAProposal__c/fields/GoodsAnimalsCustodyLimit__c.field-meta.xml
<CustomField>
    <fullName>GoodsAnimalsCustodyLimit__c</fullName>
    <label>Goods/animals custody Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>