force-app/zurich-base/main/default/objects/RPAProposal__c/fields/GoodsAnimalsCustodyObjectLimit__c.field-meta.xml
<CustomField>
    <fullName>GoodsAnimalsCustodyObjectLimit__c</fullName>
    <label>Goods/animals custody Object limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>