force-app/zurich-base/main/default/objects/RPAProposal__c/fields/GoodsEmployeesAndVisitorsLimit__c.field-meta.xml
<CustomField>
    <fullName>GoodsEmployeesAndVisitorsLimit__c</fullName>
    <label>Goods employees and visitors Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>