force-app/zurich-base/main/default/objects/RPAProposal__c/fields/HotelCloakroomLaundryFranchise__c.field-meta.xml
<CustomField>
    <fullName>HotelCloakroomLaundryFranchise__c</fullName>
    <label>Hotel Cloakroom Laundry Franchise</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>