force-app/zurich-base/main/default/objects/RPAProposal__c/fields/HotelSafetyDepositBoxFranchise__c.field-meta.xml
<CustomField>
    <fullName>HotelSafetyDepositBoxFranchise__c</fullName>
    <label>Hotel safety deposit box franchise</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>