force-app/zurich-base/main/default/objects/RPAProposal__c/fields/HotelSafetyDepositBoxLimit__c.field-meta.xml
<CustomField>
    <fullName>HotelSafetyDepositBoxLimit__c</fullName>
    <label>Hotel Safety Deposit Box Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>