force-app/zurich-base/main/default/objects/RPAProposal__c/fields/HotelsOwnSafeDepositBoxesLimit__c.field-meta.xml
<CustomField>
    <fullName>HotelsOwnSafeDepositBoxesLimit__c</fullName>
    <label>Hotel&apos;s own safe deposit boxes Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>