force-app/zurich-base/main/default/objects/RPAProposal__c/fields/HotelValetParkingLimit__c.field-meta.xml
<CustomField>
    <fullName>HotelValetParkingLimit__c</fullName>
    <label>Hotel Valet Parking Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>