force-app/zurich-base/main/default/objects/RPAProposal__c/fields/HotelValetParkingServiceFranchise__c.field-meta.xml
<CustomField>
    <fullName>HotelValetParkingServiceFranchise__c</fullName>
    <label>Hotel Valet Parking Service Franchise</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>