force-app/zurich-base/main/default/objects/RPAProposal__c/fields/IdentifierType__c.field-meta.xml
<CustomField>
    <fullName>IdentifierType__c</fullName>
    <label>Identifier type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>