force-app/zurich-base/main/default/objects/RPAProposal__c/fields/IntermediaryName__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryName__c</fullName>
    <label>Intermediary Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>