force-app/zurich-base/main/default/objects/RPAProposal__c/fields/IntermediateCode__c.field-meta.xml
<CustomField>
    <fullName>IntermediateCode__c</fullName>
    <label>Intermediate Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>