force-app/zurich-base/main/default/objects/RPAProposal__c/fields/LaundryandCloakroomLimitHotels__c.field-meta.xml
<CustomField>
    <fullName>LaundryandCloakroomLimitHotels__c</fullName>
    <label>Laundry and Cloakroom Limit Hotels</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>