force-app/zurich-base/main/default/objects/RPAProposal__c/fields/LegalDefense__c.field-meta.xml
<CustomField>
    <fullName>LegalDefense__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal defense</label>
    <type>Checkbox</type>
</CustomField>