force-app/zurich-base/main/default/objects/RPAProposal__c/fields/LimitAdjacent__c.field-meta.xml
<CustomField>
    <fullName>LimitAdjacent__c</fullName>
    <label>Limit Adjacent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>