force-app/zurich-base/main/default/objects/RPAProposal__c/fields/LimitCablesAndConduits__c.field-meta.xml
<CustomField>
    <fullName>LimitCablesAndConduits__c</fullName>
    <label>Limit Cables and Conduits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>