force-app/zurich-base/main/default/objects/RPAProposal__c/fields/LimitonAssemblyandDisassemblyCosts__c.field-meta.xml
<CustomField>
    <fullName>LimitonAssemblyandDisassemblyCosts__c</fullName>
    <label>Limit on Assembly and Disassembly Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>