force-app/zurich-base/main/default/objects/RPAProposal__c/fields/LimitPreexistingAssets__c.field-meta.xml
<CustomField>
    <fullName>LimitPreexistingAssets__c</fullName>
    <label>Limit Pre-existing Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>