force-app/zurich-base/main/default/objects/RPAProposal__c/fields/LimitProductsAndOrWorks__c.field-meta.xml
<CustomField>
    <fullName>LimitProductsAndOrWorks__c</fullName>
    <label>Limit Products and/or Works</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>