force-app/zurich-base/main/default/objects/RPAProposal__c/fields/LocativeFranchise__c.field-meta.xml
<CustomField>
    <fullName>LocativeFranchise__c</fullName>
    <label>Locative Franchise</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>