force-app/zurich-base/main/default/objects/RPAProposal__c/fields/LocativeLimit__c.field-meta.xml
<CustomField>
    <fullName>LocativeLimit__c</fullName>
    <label>Locative Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>