force-app/zurich-base/main/default/objects/RPAProposal__c/fields/MailDestinationResponse__c.field-meta.xml
<CustomField>
    <fullName>MailDestinationResponse__c</fullName>
    <label>Mail destination response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>