force-app/zurich-base/main/default/objects/RPAProposal__c/fields/NameOfTheRoad__c.field-meta.xml
<CustomField>
    <fullName>NameOfTheRoad__c</fullName>
    <label>Name of the Road</label>
    <length>255</length>
    <type>Text</type>
</CustomField>