force-app/zurich-base/main/default/objects/RPAProposal__c/fields/NumberEmployeesInWorkshopForTesters__c.field-meta.xml
<CustomField>
    <fullName>NumberEmployeesInWorkshopForTesters__c</fullName>
    <label>Number Employees in Workshop for Testers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>