force-app/zurich-base/main/default/objects/RPAProposal__c/fields/NumberOfBoxes__c.field-meta.xml
<CustomField>
    <fullName>NumberOfBoxes__c</fullName>
    <label>Number of Boxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>