force-app/zurich-base/main/default/objects/RPAProposal__c/fields/ObjectLimitinVehicle__c.field-meta.xml
<CustomField>
    <fullName>ObjectLimitinVehicle__c</fullName>
    <label>Object Limit in Vehicle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>