force-app/zurich-base/main/default/objects/RPAProposal__c/fields/ObjInRoomLimitPerRoom__c.field-meta.xml
<CustomField>
    <fullName>ObjInRoomLimitPerRoom__c</fullName>
    <label>Obj. in room Limit per room</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>