force-app/zurich-base/main/default/objects/RPAProposal__c/fields/OfferNumber__c.field-meta.xml
<CustomField>
    <fullName>OfferNumber__c</fullName>
    <label>Offer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>