force-app/zurich-base/main/default/objects/RPAProposal__c/fields/PaymentChannel__c.field-meta.xml
<CustomField>
    <fullName>PaymentChannel__c</fullName>
    <label>Payment Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>