force-app/zurich-base/main/default/objects/RPAProposal__c/fields/PolicyForWork__c.field-meta.xml
<CustomField>
    <fullName>PolicyForWork__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Policy For Work</label>
    <type>Checkbox</type>
</CustomField>