force-app/zurich-base/main/default/objects/RPAProposal__c/fields/PollutionFranchise__c.field-meta.xml
<CustomField>
    <fullName>PollutionFranchise__c</fullName>
    <label>Pollution Franchise</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>