force-app/zurich-base/main/default/objects/RPAProposal__c/fields/PollutionLimit__c.field-meta.xml
<CustomField>
    <fullName>PollutionLimit__c</fullName>
    <label>Pollution Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>