force-app/zurich-base/main/default/objects/RPAProposal__c/fields/PostWorkDeadline__c.field-meta.xml
<CustomField>
    <fullName>PostWorkDeadline__c</fullName>
    <label>Post Work Deadline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>