force-app/zurich-base/main/default/objects/RPAProposal__c/fields/PostWorkFranchise__c.field-meta.xml
<CustomField>
    <fullName>PostWorkFranchise__c</fullName>
    <label>Post Work Franchise</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>