force-app/zurich-base/main/default/objects/RPAProposal__c/fields/PostWorkLimit__c.field-meta.xml
<CustomField>
    <fullName>PostWorkLimit__c</fullName>
    <label>Post work limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>