force-app/zurich-base/main/default/objects/RPAProposal__c/fields/PrivateLifeFranchise__c.field-meta.xml
<CustomField>
    <fullName>PrivateLifeFranchise__c</fullName>
    <label>Private Life Franchise</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>