force-app/zurich-base/main/default/objects/RPAProposal__c/fields/ProductWithdrawalLimit__c.field-meta.xml
<CustomField>
    <fullName>ProductWithdrawalLimit__c</fullName>
    <label>Product Withdrawal Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>