force-app/zurich-base/main/default/objects/RPAProposal__c/fields/PublicRadioDomainLimit__c.field-meta.xml
<CustomField>
    <fullName>PublicRadioDomainLimit__c</fullName>
    <label>Public radio domain Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>