force-app/zurich-base/main/default/objects/RPAProposal__c/fields/Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire__c</fullName>
    <label>Questionnaire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>