force-app/zurich-base/main/default/objects/RPAProposal__c/fields/RCexploitationCompensationLimit__c.field-meta.xml
<CustomField>
    <fullName>RCexploitationCompensationLimit__c</fullName>
    <label>RC exploitation Compensation limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>