force-app/zurich-base/main/default/objects/RPAProposal__c/fields/RCexploitationFranchise__c.field-meta.xml
<CustomField>
    <fullName>RCexploitationFranchise__c</fullName>
    <label>RC exploitation Franchise</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>