force-app/zurich-base/main/default/objects/RPAProposal__c/fields/RoomObjectLimit__c.field-meta.xml
<CustomField>
    <fullName>RoomObjectLimit__c</fullName>
    <label>Room Object Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>