force-app/zurich-base/main/default/objects/RPAProposal__c/fields/RPAActivitySuccessRate__c.field-meta.xml
<CustomField>
    <fullName>RPAActivitySuccessRate__c</fullName>
    <label>RPA activity success rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>