force-app/zurich-base/main/default/objects/RPAProposal__c/fields/SafeBoxesPerRoomLimitPerBox__c.field-meta.xml
<CustomField>
    <fullName>SafeBoxesPerRoomLimitPerBox__c</fullName>
    <label>Safe boxes per room Limit per box</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>