force-app/zurich-base/main/default/objects/RPAProposal__c/fields/SafeDepositBoxesInOwnHotelLimitPerBox__c.field-meta.xml
<CustomField>
    <fullName>SafeDepositBoxesInOwnHotelLimitPerBox__c</fullName>
    <label>Safe deposit boxes in own hotel Limit pe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>