force-app/zurich-base/main/default/objects/RPAProposal__c/fields/SafeDepositBoxesInYourOwnHotelFranchise__c.field-meta.xml
<CustomField>
    <fullName>SafeDepositBoxesInYourOwnHotelFranchise__c</fullName>
    <label>Safe deposit boxes in your own hotel Fra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>