force-app/zurich-base/main/default/objects/RPAProposal__c/fields/SafesInHotelsOwnRoomsNoOfSafes__c.field-meta.xml
<CustomField>
    <fullName>SafesInHotelsOwnRoomsNoOfSafes__c</fullName>
    <label>Safes in hotel&apos;s own rooms No. of safes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>