force-app/zurich-base/main/default/objects/RPAProposal__c/fields/StatusRPA__c.field-meta.xml
<CustomField>
    <fullName>StatusRPA__c</fullName>
    <description>Indicates the status of the RPA proposal</description>
    <inlineHelpText>Indica el estado en que se encuentra la propuesta RPA</inlineHelpText>
    <label>Status RPA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En curso RPA</fullName>
            </value>
            <value>
                <fullName>Rechazado RPA</fullName>
            </value>
            <value>
                <fullName>Revisar suscriptor (¿UW?)</fullName>
            </value>
            <value>
                <fullName>Finalizado RPA</fullName>
            </value>
            <value>
                <fullName>Para gestión RPA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>