force-app/zurich-base/main/default/objects/RPAProposal__c/fields/TechniciansOnStaff__c.field-meta.xml
<CustomField>
    <fullName>TechniciansOnStaff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Technicians on Staff</label>
    <type>Checkbox</type>
</CustomField>