force-app/zurich-base/main/default/objects/RPAProposal__c/fields/TesterFranchise__c.field-meta.xml
<CustomField>
    <fullName>TesterFranchise__c</fullName>
    <label>Tester Franchise</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>