force-app/zurich-base/main/default/objects/RPAProposal__c/fields/TestersLimit__c.field-meta.xml
<CustomField>
    <fullName>TestersLimit__c</fullName>
    <label>Testers Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>