force-app/zurich-base/main/default/objects/RPAProposal__c/fields/TestVehicleLimit__c.field-meta.xml
<CustomField>
    <fullName>TestVehicleLimit__c</fullName>
    <label>Test Vehicle Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>