force-app/zurich-base/main/default/objects/RPAProposal__c/fields/TypeOfCommission__c.field-meta.xml
<CustomField>
    <fullName>TypeOfCommission__c</fullName>
    <label>Type of commission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>