force-app/zurich-base/main/default/objects/RPAProposal__c/fields/TypeOfTrack__c.field-meta.xml
<CustomField>
    <fullName>TypeOfTrack__c</fullName>
    <label>Type of track</label>
    <length>255</length>
    <type>Text</type>
</CustomField>