force-app/zurich-base/main/default/objects/RPAProposal__c/fields/UnionAndMixFranchise__c.field-meta.xml
<CustomField>
    <fullName>UnionAndMixFranchise__c</fullName>
    <label>Union and Mix Franchise</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>