force-app/zurich-base/main/default/objects/RPAProposal__c/fields/UnionAndMixtureLimit__c.field-meta.xml
<CustomField>
    <fullName>UnionAndMixtureLimit__c</fullName>
    <label>Union and Mixture Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>