force-app/zurich-base/main/default/objects/RPAProposal__c/fields/USA_CanadaBilling__c.field-meta.xml
<CustomField>
    <fullName>USA_CanadaBilling__c</fullName>
    <label>USA-Canada Billing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>