force-app/zurich-base/main/default/objects/RPAProposal__c/fields/ValetParkingLimitPerVehicle__c.field-meta.xml
<CustomField>
    <fullName>ValetParkingLimitPerVehicle__c</fullName>
    <label>Valet Parking Limit per Vehicle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>