force-app/zurich-base/main/default/objects/RPAProposal__c/fields/VehicleObjectLimitInVehicle__c.field-meta.xml
<CustomField>
    <fullName>VehicleObjectLimitInVehicle__c</fullName>
    <label>Vehicle Object Limit in Vehicle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>