force-app/zurich-base/main/default/objects/RPAProposal__c/fields/VehiclesInCustodyNoofWorkshopEmpl__c.field-meta.xml
<CustomField>
    <fullName>VehiclesInCustodyNoofWorkshopEmpl__c</fullName>
    <label>Vehicles in custody No. of workshop empl</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>