force-app/zurich-base/main/default/objects/RPAProposal__c/fields/VehiclesInCustodyVehicleLimit__c.field-meta.xml
<CustomField>
    <fullName>VehiclesInCustodyVehicleLimit__c</fullName>
    <label>Vehicles in custody Vehicle limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>