force-app/zurich-base/main/default/objects/RPAProposal__c/fields/WorkedElementLimit__c.field-meta.xml
<CustomField>
    <fullName>WorkedElementLimit__c</fullName>
    <label>Worked element Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>