force-app/zurich-base/main/default/objects/RPAProposal__c/fields/WorkplaceAccidentsLimitPerVictim__c.field-meta.xml
<CustomField>
    <fullName>WorkplaceAccidentsLimitPerVictim__c</fullName>
    <label>Workplace accidents Limit per victim</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>